@@ -1,64 +1,0 @@
-; BseProject
-
-(bse-version "0.6.4")
-
-(container-child "BseCSynth::%bse-intern-mono-wave"
-  (modification-time "2004-12-15 22:54:03")
-  (creation-time "2003-04-27 20:45:24")
-  (author "Tim Janik")
-  (container-child "BseWaveOsc::wave-osc"
-    (fm-n-octaves 1)
-    (exponential-fm #f)
-    (fm-perc 10)
-    (channel 1)
-    (pos-y 1.94)
-    (pos-x 0.28)
-    (blurb "")
-    (source-input "freq-in" (link 1 "midi-note") "frequency")
-    (source-input "sync-in" (link 1 "midi-note") "gate")
-    (source-input "mod-in" (link 1 "midi-controls") "ctrl-out1"))
-  (container-child "BseInstrumentInput::midi-note"
-    (pos-y 1.84)
-    (pos-x -2.51))
-  (container-child "BseMidiController::midi-controls"
-    (control-4 BSE_MIDI_SIGNAL_PRESSURE)
-    (control-3 BSE_MIDI_SIGNAL_CONTINUOUS_7)
-    (control-2 BSE_MIDI_SIGNAL_CONTINUOUS_1)
-    (control-1 BSE_MIDI_SIGNAL_PITCH_BEND)
-    (pos-y -0.15)
-    (pos-x -2.49))
-  (container-child "BseAmplifier::amplifier"
-    (master-volume 1)
-    (base-level 50)
-    (ostrength 100)
-    (ctrl-exp #t)
-    (ctrl-mul #f)
-    (clevel2 100)
-    (clevel1 100)
-    (alevel2 100)
-    (alevel1 100)
-    (pos-y 1.91)
-    (pos-x 2.78)
-    (source-input "audio-in1" (link 1 "wave-osc") "audio-out")
-    (source-input "ctrl-in2" (link 1 "adsr") "ctrl-out"))
-  (container-child "BseInstrumentOutput::instrument-output"
-    (pos-y -0.23)
-    (pos-x 2.85)
-    (source-input "left-audio" (link 1 "volume-multiplier") "audio-out")
-    (source-input "right-audio" (link 1 "volume-multiplier") "audio-out")
-    (source-input "synth-done" (link 1 "adsr") "done-out"))
-  (container-child "BseSimpleADSR::adsr"
-    (time-range bse-time-range-short)
-    (release-time 3)
-    (sustain-level 100)
-    (decay-time 0)
-    (attack-time 0.3)
-    (pos-y 1)
-    (pos-x 0.27)
-    (source-input "gate-in" (link 1 "midi-note") "gate"))
-  (container-child "BseMult::volume-multiplier"
-    (pos-y 0.9)
-    (pos-x 2.81)
-    (source-input "audio-in1" (link 1 "amplifier") "audio-out")
-    (source-input "audio-in2" (link 1 "midi-controls") "ctrl-out3")
-    (source-input "audio-in3" (link 1 "midi-note") "velocity")))
